<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    >

     
    
    <android.support.v4.view.ViewPager
        android:id="@+id/activity_integral_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/Integral_Layout_dot" 
        />
    
    <LinearLayout
        android:id="@+id/Integral_Layout_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"  
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/Integral_Layout_buttom" 
        >
       
        <ImageView
               android:id="@+id/Integral_dot_left" 
               android:layout_width="0dp"
               android:layout_height="wrap_content"            
               android:layout_marginRight="5dp"     
               android:src="@drawable/circle_white"
               android:layout_weight="1"
              /> 
         <ImageView 
               android:id="@+id/Integral_dot_right" 
               android:layout_width="0dp"
               android:layout_height="wrap_content"           
               android:layout_marginLeft="5dp"
               android:src="@drawable/circle_green"
               android:layout_weight="1"
              /> 
    </LinearLayout>
    
    <RelativeLayout 
	    android:id="@+id/Integral_Layout_buttom"
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:layout_alignParentBottom="true"
	    >
	    
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="7"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="30dp"
	        android:layout_alignParentTop="true"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/Integral_Button_share"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="25dp"
	            android:background="@drawable/button_green"
	            android:text="@string/integral_share"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold"
	            android:textSize="12dp"
	            />
	        
	        <Button 
	            android:id="@+id/Integral_Button_again"
	            android:layout_width="0dp"	 
	            android:layout_weight="3"
	            android:layout_height="wrap_content"
	            android:layout_margin="8dp"
	            android:background="@drawable/button2"
	            android:text="@string/integral_Again"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold"
	            android:textSize="18sp"/>
	        
	        <Button 
	            android:id="@+id/Integral_Button_back"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_marginRight="25dp"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_green"
	            android:text="@string/integral_home"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold"
	            android:textSize="12dp"/>
	    </LinearLayout>
	</RelativeLayout>
    
</RelativeLayout>